private git repo config for argocd fixed

--- a/k8_shared/config/argo_cd_values.tftpl.yml
+++ b/k8_shared/config/argo_cd_values.tftpl.yml
@@ -53,9 +53,11 @@ configs:
 
   credentialTemplates:
     ssh-creds:
+      name: git-repo
+      type: git
       url: "${github_repo_url}"
       sshPrivateKey: |
-        {$github_ssh_key}
+        ${github_ssh_key}
 
   repositories:
     k8-repo:
