--- a/k8_shared/config/argo_cd_values.tftpl.yml
+++ b/k8_shared/config/argo_cd_values.tftpl.yml
@@ -83,9 +83,9 @@ applicationSet:
   enabled: false
 
 redis:
-  enabled: false
+  enabled: true
 
-# External Redis parameters
-externalRedis:
-  host: "redis.shared"
-  port: 6379
+# # External Redis parameters
+# externalRedis:
+#   host: "redis.shared"
+#   port: 6379
