argocd values file indent added

--- a/k8_shared/config/argo_cd_values.tftpl.yml
+++ b/k8_shared/config/argo_cd_values.tftpl.yml
@@ -57,7 +57,7 @@ configs:
       type: git
       url: "${github_repo_url}"
       sshPrivateKey: |
-        ${github_ssh_key}
+        ${indent(8, github_ssh_key)}
 
   repositories:
     k8-repo:
